<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MacauCtsHotel</string>
    <string name="action_settings">Settings</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="map">地图</string>
    <string name="username">用户名：</string>
    <string name="password">密码：</string>
    <string name="name">姓名：</string>
    <string name="email">邮箱：</string>
    <string name="phone">手机：</string>
    <string name="confirm_password">确认密码：</string>
    <string name="remember_the_password">记住密码</string>
    <string name="automatic_login">自动登录</string>
    <string name="agree_the_items">同意条款</string>
    <string name="check_the_items">查看条款</string>
    <string name="submit">提交</string>
    <string name="book">酒店预订</string>
    <string name="sale">特惠活动</string>
    <string name="intro">酒店简介</string>
    <string name="setting">个人中心</string>
    <string name="icon">图</string>
    <string name="user_info">个人资料</string>
    <string name="pay_flow">支付流程</string>
    <string name="order_Management">订单管理</string>
    <string name="comment_Management">评论管理</string>
    <string name="change_password">修改密码</string>
    <string name="help">帮助与反馈</string>
    <string name="favorites">收藏夹</string>
    <string name="about">关于</string>
    <string name="signout">登出账户</string>
    <string name="version">版本</string>
    <string name="new_version">当前已是最新版本</string>
    <string name="version_id">1.0</string>
    <string name="update">检测最新版本</string>
    <string name="suggestion">请留下您的宝贵建议或意见</string>
    <string name="old_password">旧密码:</string>
    <string name="new_password">新密码:</string>
    <string name="second_new_password">确认新密码:</string>
    <string name="ID_number">卡号:</string>
    <string name="test_id_number">575879366</string>
    <string name="test_phone">85383911111</string>
    <string name="test_email">hotels@hotels.com</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="order_number">订单号：</string>
    <string name="order_number1">订单号：请支付生成订单号</string>
    <string name="room_type1">入住房型：</string>
    <string name="comment_type">总体评价：中评</string>
    <string name="cancel_order">您确定要取消订单吗？</string>
    <string name="time">时间</string>
    <string name="city_name">城市：</string>
    <string name="hotel">酒店：</string>
    <string name="live_time">入住时间：</string>
    <string name="live_time2">入住时间</string>
    <string name="leave_time">离店时间：</string>
    <string name="leave_time2">离店时间</string>
    <string name="days">晚数：</string>
    <string name="rooms">房间数：</string>
    <string name="rooms2">房间数</string>
    <string name="rooms_date">一间</string>
    <string name="search">搜索</string>
    <string name="my_favorites">我的收藏</string>
    <string name="new_order">有效订单</string>
    <string name="history_order">历史订单</string>
    <string name="cancel">取消</string>
    <string name="comment">评论</string>
    <string name="canceled">已取消</string>
    <string name="commented">已评论</string>
    <string name="OK">确定</string>
    <string name="good">好评</string>
    <string name="bad">差评</string>
    <string name="normal">一般</string>
    <string name="comment_all_type">总体评价：</string>
    <string name="order_comment_suggest">建议或意见：</string>
    <string name="price">HK$&#160;2082</string>
    <string name="search_book">预订</string>
    <string name="hotelIntro">酒店介绍</string>
    <string name="hotelImages">酒店图片</string>
    <string name="hotelServer">酒店服务</string>
    <string name="hotelRoomType">酒店房型</string>
    <string name="pay">&#160;&#160;支&#160;&#160;&#160;&#160;付&#160;&#160;</string>
    <string name="unionpay">银联支付</string>
    <string name="masterpay">MasterCard支付</string>
    <string name="cashpay">前台支付</string>
    <string name="visapay">VISA支付</string>
	<string name="credit_card">信用卡担保</string>
    <string name="hotel_book">酒店预订</string>
    <string name="check_order">核对订单</string>
    <string name="success_order">预订支付</string>
    <string name="room_number">房间数量：</string>
    <string name="live_customers">入&#160;&#160;住&#160;&#160;人：</string>
    <string name="live_customers_number">住房人数：</string>
    <string name="live_customers_number_value">2人</string>
    <string name="book_customer">订&#160;&#160;房&#160;&#160;人：</string>
    <string name="book_customer_email">订房邮箱：</string>
    <string name="book_customer_phone">联系电话：</string>
    <string name="customers_name_write">不同顾客请用“、”隔开</string>
    <string name="remark">备注:没有可不填</string>
    <string name="remark2">备注：</string>
    <string name="book_success">&#160;&#160;预订成功！</string>
    <string name="all_price">总价：</string>
    <string name="look_over_order">查看订单</string>
    <string name="go_on_book">继续预订</string>
    <string name="order_price">订单总价：</string>
    <string name="room_type5">开放式套房</string>
    <string name="room_type4">房型：</string>
    <string name="hotel_name">酒店名称：</string>
    <string name="hotel_addr">酒店地址：</string>
    <string name="nothing">无</string>
    <string name="next">下一步</string>
    <string name="Integration">积分卡</string>
    <string name="alert">请填写完整住房信息</string>
    <string name="mac">澳门</string>
    <string name="free_bus">免费穿梭巴士</string>
    <string name="share">分享</string>
    <string name="touch">触摸可以放大</string>
    <string name="picture_info">图片详情</string>
    
    <string name="credit_pay">信用卡担保</string>
    <string name="credit_type">信用卡类型：</string>
    <string name="credit_date">卡有效期：</string>
    <string name="credit_date_hint">月/年，如09/14</string>
    <string name="credit_id">信用卡号：</string>
    <string name="credit_id_hint">输入信用卡号</string>
    <string name="credit_id_toast">请输入有效的卡号</string>
    <string name="credit_pwd">卡验证码：</string>
    <string name="credit_pwd_hint">签名栏末尾最后三位</string>
    

    <string-array name="rooms_number_spinner">
        <item>一间</item>
        <item>二间</item>
        <item>三间</item>
        <item>四间</item>
        <item>六间</item>
    </string-array>
    <string-array name="hotelIntro">
        <item>酒店介绍</item>
        <item>酒店图片</item>
        <item>酒店服务</item>
        <item>酒店房型</item>
    </string-array>
    <string-array name="language">
        <item>跟随系统</item>
        <item>中文简体</item>
        <item>中文繁体</item>
        <item>英语</item>
    </string-array>

    <string name="order_number_tv1">订单编号:</string>
    <string name="order_total_price">订单总价:</string>
    <string name="hotel_name_tv3">酒店名称:</string>
    <string name="room_type_tv1">房间类型:</string>
    <string name="room_count_tv1">房间数:</string>
    <string name="hotel_address_tv5">酒店地址:</string>
    <string name="contrat_phone">联系电话</string>
    <string name="enter_time_tv3">入住时间:</string>
    <string name="enter_person_tv1">入住人:</string>
    <string name="contrat_persion_email">联系邮箱:</string>
    <string name="contrat_persion_phone">联系电话:</string>
    <string name="extrat_tv1">备注:</string>
    <string name="enter_time_tv8">入住时间</string>
    <string name="call_service">拨打中酒客服电话</string>
    <string name="call">拨打</string>
    <string name="choice_language">请选择语言</string>
    <string name="default_language">跟随系统</string>
    <string name="rCN">中文简体</string>
    <string name="rHK">中文繁体</string>
    <string name="en">英语</string>
    <string name="collector">收藏</string>
    <string name="change_order">修改订单</string>
    <string name="chioce_pay">请选择支付方式</string>
    <string name="travel_news">旅游资讯</string>
    <string name="please_choose">请选择</string>
    <string name="pay_success">支付成功!</string>

    <!-- hint -->
    <string name="code_hint">请输入手机号</string>
    
	<string name="entertime_toast">请选择入住时间</string>
	<string name="leavetime_toast">请选择离店时间</string>
	<string name="code_toast">请输入手机号</string>
	<string name="name_toast">请输入姓名</string>
	<string name="email_toast">请输入邮箱</string>
	<string name="password_toast">请输入至少6位的密码</string>
	<string name="password2_toast">请输入至少6位的密码</string>
	<string name="password3_toast">请输入相同的密码</string>
	<string name="password4_toast">更改资料时，请输入密码</string>
	<string name="date_toast">请选择正确的入住或离店时间</string>
	<string name="input_toast">请输入修改信息</string>
	<string name="update_toast">没有修改任何资料</string>
	<string name="input_toast1">请输入完整的资料</string>
	<string name="network_toast">无法访问网络</string>
	<string name="network_toast1">访问异常，请稍后重连</string>
	<string name="network_toast2">网络繁忙，请销等</string>
	<string name="clause_toast">未同意条款</string>
	<string name="data_null_toast">暂无该数据</string>
	<string name="phone_toast">请输入联系电话</string>
	<string name="pay_toast">请选择支付方式</string>
	<string name="provision">条款</string>
	
	<string name="roomratews_full">已满</string>
	<string name="roomratews_null">预定</string>
	<string name="night">晚</string>
	<string name="total">合计：</string>
	<string name="lowest">最低:</string>
	<string name="inhouse">在住</string>
	<string name="noshow">未到</string>
	<string name="checkedout">离店</string>
	<string name="history">归档</string>
	<string name="reservation">预定</string>
	<string name="waitlist">等候</string>
	<string name="to">至</string>
	<string name="cny">人民币</string>
	<string name="hkd">港币</string>
	
    <string name="register_success_toast">注册成功</string>
    <string name="action_success_toast">操作成功</string>
    
	<string name="pay_provision"> 1、如果在入住前3天內提交預訂取消申請（第2點定義情況以外），將被收取1晚的房費作為取消費。不能在預訂日期入住酒店將被視同NO-Show（客人未按預訂日期入住），需要支付1晚的房費作為取消費。\n2、特別節假日期間及酒店特價房型或限時搶購房型的預訂不準許更改、取消及退款。使用信用卡擔保預訂上述情況房型，酒店有權在客人入住之前收取全額房費。\n特別節假日包括：\n（6、7、8/9/2014；1、2、3、4、5、6/10/2014；13、14、15、16/11/2014；24、25、26、27/12/2014）\n3、選擇前臺現付時，您的預訂將會保留至入住當天16：00，以酒店所在地時間為准。逾期，酒店有權取消預訂。（預訂政策）</string>
	
	<string name="update1">更新</string>
	<string name="software_update">软件升级</string>
	<string name="down_success">下载成功，点击安装</string>
	<string name="down_failure">下载失败</string>
	<string name="downing">正在下载</string>
	<string name="details">详情</string>
</resources>