<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AppBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            style="@style/teamFirstLayoutStyle"
            android:layout_marginTop="@dimen/activity_vertical_margin" >

            <TextView
                style="@style/selfTextStyle"
                android:layout_marginLeft="@dimen/space"
                android:text="@string/room_number" />

            <ImageView
                android:id="@+id/icon1"
                style="@style/image_icon_style"
                android:contentDescription="@string/app_name"
                android:src="@drawable/icon_14" />

            <TextView
                android:id="@+id/liveEditText"
                style="@style/selfTextStyle"
                android:layout_toLeftOf="@id/icon1"
                android:text="@string/rooms_date" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/liveTimeLayout"
            style="@style/teamMiddleLayoutStyle" >

            <TextView
                style="@style/selfTextStyle"
                android:layout_marginLeft="@dimen/space"
                android:text="@string/live_time" />

            <ImageView
                android:id="@+id/icon2"
                style="@style/image_icon_style"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/tv_enter"
                style="@style/selfTextStyle"
                android:layout_toLeftOf="@id/icon2" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/liveTimeLayout1"
            style="@style/teamMiddleLayoutStyle" >

            <TextView
                style="@style/selfTextStyle"
                android:layout_marginLeft="@dimen/space"
                android:text="@string/leave_time" />

            <ImageView
                android:id="@+id/icon8"
                style="@style/image_icon_style"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/tv_leave"
                style="@style/selfTextStyle"
                android:layout_toLeftOf="@id/icon8" />
        </RelativeLayout>

        <RelativeLayout style="@style/teamMiddleLayoutStyle" >

            <TextView
                style="@style/selfTextStyle"
                android:layout_marginLeft="@dimen/space"
                android:text="@string/live_customers_number" />

            <ImageView
                android:id="@+id/icon4"
                style="@style/image_icon_style"
                android:contentDescription="@string/app_name"
                android:src="@drawable/icon_14" />

            <TextView
                android:id="@+id/textView"
                style="@style/selfTextStyle"
                android:layout_toLeftOf="@id/icon4"
                android:text="@string/live_customers_number_value" />
        </RelativeLayout>

        <RelativeLayout style="@style/teamMiddleLayoutStyle" >

            <TextView
                android:id="@+id/custmersNameTextView"
                style="@style/selfTextStyle"
                android:layout_marginLeft="@dimen/space"
                android:text="@string/live_customers" />

            <EditText
                android:id="@+id/custmersNameEditText"
                style="@style/selfEditTextStyle"
                android:layout_toRightOf="@id/custmersNameTextView"
                android:hint="@string/customers_name_write" />
        </RelativeLayout>

        <RelativeLayout style="@style/teamMiddleLayoutStyle" >

            <TextView
                android:id="@+id/bookCustomerTextView"
                style="@style/selfTextStyle"
                android:layout_marginLeft="@dimen/space"
                android:text="@string/book_customer" />

            <EditText
                android:id="@+id/bookCustomerEditText"
                style="@style/selfEditTextStyle"
                android:layout_toRightOf="@id/bookCustomerTextView" />
        </RelativeLayout>

        <RelativeLayout style="@style/teamMiddleLayoutStyle" >

            <TextView
                android:id="@+id/bookCustomerEmailTextView"
                style="@style/selfTextStyle"
                android:layout_marginLeft="@dimen/space"
                android:text="@string/book_customer_email" />

            <EditText
                android:id="@+id/bookCustomerEmailEditText"
                style="@style/selfEditTextStyle"
                android:layout_toRightOf="@id/bookCustomerEmailTextView" />
        </RelativeLayout>
        
        <RelativeLayout style="@style/teamLastLayoutStyle" >

            <TextView
                android:id="@+id/bookCustomerPhoneTextView"
                style="@style/selfTextStyle"
                android:layout_marginLeft="@dimen/space"
                android:text="@string/book_customer_phone" />

            <EditText
                android:id="@+id/bookCustomerPhoneEditText"
                style="@style/selfEditTextStyle"
                android:layout_toRightOf="@id/bookCustomerPhoneTextView"
                android:inputType="numberSigned" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/suggestionLayout"
            style="@style/bigSelfMarginTopLayoutStyle1" >

            <EditText
                android:id="@+id/suggestionEditText"
                style="@style/bigSelfEditTextStyle"
                android:gravity="top"
                android:hint="@string/remark" />
        </LinearLayout>

        <Button
            android:id="@+id/OK"
            style="@style/okButtonStyle"
            android:layout_marginTop="55dp"
            android:text="@string/next" />
    </LinearLayout>

</ScrollView>