<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AppBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/topTitleLayout"
        style="@style/TopTitleLayout" >

        <Button
            android:id="@+id/button"
            style="@style/TopTitleBackButtonStyle" />

        <TextView
            style="@style/TopTitleTextViewStyle"
            android:text="@string/order_Management" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/state_button_height"
        android:background="@color/white"
        android:orientation="horizontal" >

        <Button
            style="@style/state_button_style"
            android:text="@string/new_order" 
            android:id="@+id/newOrder"/>

        <Button
            style="@style/state_button_style"
            android:text="@string/history_order"
            android:id="@+id/historyOrder" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </android.support.v4.view.ViewPager>

</LinearLayout>